1er exercice: Lorsque l’on demande une opération, une facture LN de 1msat (testnet ou regtest, au choix) est générée et affichée à l’utilisateur

--- a/style.css
+++ b/style.css
@@ -59,6 +59,20 @@ table {
     margin: auto;
 }
 
+#Invoice_Table tr td, th {
+    max-width : 250px;
+    word-wrap: break-word;
+    border: 1px solid white;
+
+    /*overflow-x : scroll;*/
+}
+
+#Invoice_Table tr th {
+    /*border: 1px solid white;*/
+    background-color: blue;
+    /*overflow-x : scroll;*/
+}
+
 button {
     border: none;
     background-color: white;
@@ -105,6 +119,8 @@ a:hover{
     z-index: 100;
     position: fixed;
 }
+
+
 
 @media (orientation: landscape) and (max-height: 500px) {
     #turn {
